--- a/create-group.html
+++ b/create-group.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!https://www.w3schools.com/bootstrap/bootstrap_media_objects.asp>
     <title>MeetLanguages</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,11 +8,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script>
-    $(document).ready(function(){
-        $('[data-toggle="popover"]').popover(); 
-    });
-    </script>
 
 
   </head>
@@ -43,155 +37,49 @@
             <li><a href="members.html">Members</a></li>
             <li><a href="groups.html">Groups</a></li>
             <li><a href="meetings.html">Meetings</a></li>
-             <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
+             <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
+    <!-- Contenido principal -->
     <div class="container-fluid text-center" id="form">
       <div class="col-sm-6 col-sm-offset-2 text-left well">
-        <div>
-          <div class="media">
-            <div class="media-left">
-              <img src="img/avatar.png" alt="avatar_meetlanguages" class="media-object" id="avatar" title="Nombre Apellido"="popover" data-content="sgsdfgsd" data-trigger="hover"> 
+        <div class="text-center">
+          <h3>New group</h3>
+          <hr>
+          <!-- Formulario de creacion de un nuevo meeting -->
+          <form action="meetings.html" class="form-horizontal">
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="title">Title:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="title" placeholder="Enter title">
+                </div>
+                <br>
+                <br>
+                <label class="control-label col-sm-2" for="type">Type:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="type" placeholder="Enter type">
+                </div>
             </div>
-            <div class="media-body">
-              <h4 class="media-heading">Nombre Apellido</h4>
-              <p>Descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-          </div>
-        <hr>
-        </div>
-        <div class="text-left">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-                <span class="glyphicon glyphicon glyphicon-send"></span>
-                  Send message
-            </button>
-        </div>
-        <div>
-          <div class="media">
-            <div class="media-body">
-              <h2>About me:</h2>
-              <table class="table table-striped">
-                <tbody>
-                  <tr>
-                    <td>Birthday</td>
-                    <td>03/04/1990</td>
-                  </tr>
-                  <tr>
-                    <td>Sex</td>
-                    <td>Male</td>
-                  </tr>
-                  <tr>
-                    <td>Country</td>
-                    <td>Spain</td>
-                  </tr>
-                  <tr>
-                    <td>Native Language</td>
-                    <td>Spanish</td>
-                  </tr>
-                  <tr>
-                    <td>Language I want to learn</td>
-                    <td>German</td>
-                  </tr>
-                  <tr>
-                    <td>Skype</td>
-                    <td>asdasd@asd.com</td>
-                  </tr>
-                  <tr>
-                    <td>Occupation</td>
-                    <td>Student</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-        <div>
-          <div class="media">
-            <div class="media-body">
-              <h2>What I like:</h2>
-              <ul class="nav nav-tabs">
-                <li><a data-toggle="tab" href="#literature">Literature</a></li>
-                <li><a data-toggle="tab" href="#music">Music</a></li>
-                <li><a data-toggle="tab" href="#films">Films</a></li>
-                <li><a data-toggle="tab" href="#series">Series</a></li>
-                <li><a data-toggle="tab" href="#sports">Sports</a></li>
-                <li><a data-toggle="tab" href="#activities">Activities</a></li>
-              </ul>
-              <br>
-              <div class="tab-content">
-                <div id="literature" class="tab-pane fade">
-                  <ul>
-                    <li>Tales</li>
-                    <li>Terror</li>
-                    <li>Comic</li>
-                  </ul>
-                </div>
-                <div id="music" class="tab-pane fade">
-                  <ul>
-                    <li>Pop</li>
-                    <li>Rap</li>
-                    <li>Rock</li>
-                  </ul>
-                </div>
-                <div id="films" class="tab-pane fade">
-                  <ul>
-                    <li>Drama</li>
-                    <li>Animation</li>
-                    <li>Thriller</li>
-                  </ul>
-                </div>
-                <div id="series" class="tab-pane fade">
-                  <ul>
-                    <li>Breaking bad</li>
-                    <li>The walking dead</li>
-                    <li>House</li>
-                  </ul>
-                </div>
-                <div id="sports" class="tab-pane fade">
-                  <ul>
-                    <li>Football</li>
-                    <li>Basketball</li>
-                    <li>Tennis</li>
-                  </ul>
-                </div>
-                <div id="activities" class="tab-pane fade">
-                  <ul>
-                    <li>Science</li>
-                    <li>Sports</li>
-                    <li>Astronomy</li>
-                  </ul>
-                </div>
+            <div class="form-group">
+              <label for="aboutMe" class="control-label col-sm-2">Description:</label>
+              <div class="col-sm-10">
+                <textarea class="form-control noresize col-sm-10" rows="10" id="desciption"></textarea>
               </div>
             </div>
-          </div>
+            <div class="form-group">
+              <div class="col-sm-offset-2 col-sm-10 text-left">
+                <button type="submit" class="btn btn-primary">Create</button>
+                <!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                  <span class="glyphicon glyphicon glyphicon-plus"></span>Send invitations
+                </button>-->
+                </div>
+            </div>
+          </form>
         </div>
       </div>
-    
-      <!-- Message -->
-      <div class="modal fade" id="myModal" role="dialog">
-        <div class="modal-dialog modal-sm">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">Write a message</h4>
-            </div>
-            <div class="modal-body">
-              <form>
-                <textarea class="form-control noresize" rows="5" id="comment"></textarea>
-              </form>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-dismiss="modal">Send</button>
-              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
 
       <!-----------------------------------SIDENAV---------------------------------->
       <div class="col-sm-2">
